--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,13 +10,13 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/HeartIcon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/HeartIcon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -28,7 +28,7 @@
       "short_name": "Pulse",
       "description": "Send a quick heartbeat pulse",
       "url": "/?action=pulse",
-      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/HeartIcon.png", "sizes": "192x192" }]
     }
   ]
 }
